# Jimmy

./: .dockerignore  .env.example  .env.template  .gitignore  DEPLOY.md  Dockerfile  PRIVACY.md  README.md  capture.sh  deploy-fly.sh  deploy.sh  docker-compose.yml  fly.toml  ingest_notion.py  pyproject.toml  rebuild_index.py  start.sh  start_tunnel.sh
extension/: background.js  manifest.json  popup.html  popup.js
inbox/processed/: test_note.txt
ios/: SHORTCUT_SETUP.md  project.yml
ios/Jimmy/: APIClient.swift  AskView.swift  ContentView.swift  HomeView.swift  Info.plist  JimmyApp.swift  LearnView.swift  LibraryView.swift  NewsView.swift  NotificationScheduler.swift  OnboardingView.swift  PracticeView.swift  SearchView.swift  SettingsView.swift  SourceViewerSheet.swift  SparksView.swift  TimelineView.swift  VoiceMemoSheet.swift
ios/Jimmy.xcodeproj/: project.pbxproj
ios/Neuron/: APIClient.swift  AppSettings.swift  AskView.swift  ContentView.swift  HomeView.swift  Info.plist  LibraryView.swift  NeuronApp.swift  NewsView.swift  NotificationScheduler.swift  OnboardingView.swift  PracticeView.swift  SearchView.swift  SettingsView.swift  SparksView.swift  TimelineView.swift  VoiceMemoSheet.swift
ios/Neuron.xcodeproj/: project.pbxproj
jimmy/: cli.py  config.py  daemon.py
jimmy/api/: server.py
jimmy/contacts/: db.py  importer.py
jimmy/ingestion/: apple_health.py  canvas.py  chatgpt_export.py  claude_export.py  coding_sessions.py  course_site.py  document_ocr.py  enrich_book.py  file.py  files_scanner.py  folder.py  (+11 more)
neuron/: cli.py
scripts/: setup-tunnel.sh
(+17 files in other folders)
