[project]
name = "neuron"
version = "0.1.0"
description = "Personal intelligence system"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "chromadb>=0.5.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "openai>=1.54.0",
    "rank-bm25>=0.2.2",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "trafilatura>=1.12.0",
    "feedparser>=6.0.11",
    "youtube-transcript-api>=0.6.2",
    "spotipy>=2.23.0",
]

[project.scripts]
neuron = "neuron.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
